[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalvault"
version = "0.3.0"
description = "SignalVault Python SDK — AI audit logs and guardrails for OpenAI and Anthropic applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["ai", "audit", "guardrails", "openai", "anthropic", "claude", "llm", "compliance", "security"]
authors = [
    {name = "SignalVault", email = "support@signalvault.io"}
]
dependencies = [
    "openai>=1.0",
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://signalvault.io"
Documentation = "https://signalvault.io/docs"
Repository = "https://github.com/signalvaultio/signalvault-python"
Issues = "https://github.com/signalvaultio/signalvault-python/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.20"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
include = ["signalvault*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
